syntax = "proto3";

package google.protobuf;


option go_package = "pkg/grpc";
option csharp_namespace="Identity.Grpc";

import "google/protobuf/struct.proto";

service IdentityService{
  rpc ValidateToken(ValidateTokenRequest) returns(ValidateTokenResponse);
  rpc CreateUser(CreateUserRequest) returns(CreateUserResponse);
}

message ValidateTokenRequest{
  string Token = 1;
}

message ValidateTokenResponse{
  bool IsValid = 1;
  string Message = 2;
  google.protobuf.Struct Claims=3;
}

message CreateUserRequest{
  string Email =1;
  string Password =2;
  bool GeneratePassword=3;
}

message CreateUserResponse{
string UserId = 1;
}
